✨ (ArticlesList): Show article samples

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -47,3 +47,8 @@ nav a:hover {
     color: black;
     padding: 16px 0 0 0;
 }
+
+.article-list-item p {
+    padding-bottom: 32px;
+    border-bottom: 2px solid black;
+}
