--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -3,6 +3,10 @@ body {
     font-size: 18px;
 }
 
+h3 {
+    margin-bottom: 1em;
+}
+
 nav {
     border-bottom: 4px solid black;
     text-align: center;
