--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -3,6 +3,16 @@ body {
     font-size: 18px;
 }
 
+button {
+    padding: 16px;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-size: 16px;
+    background-color: black;
+    color: white;
+    border-radius: 8px;
+    cursor: pointer;
+}
+
 h3, h4 {
     margin-bottom: 1em;
 }
@@ -55,6 +65,12 @@ nav a:hover {
 .article-list-item p {
     padding-bottom: 32px;
     border-bottom: 2px solid black;
+}
+
+#upvotes-section p {
+    font-size: .9em;
+    display: inline-block;
+    margin-left: 1em;
 }
 
 p {
