--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -67,6 +67,31 @@ nav a:hover {
     border-bottom: 2px solid black;
 }
 
+#add-comment-form {
+    border-bottom: 2px solid black;
+    padding: 16px;
+}
+
+#add-comment-form h3 {
+    margin-bottom: 16px;
+}
+
+#add-comment-form input, textarea {
+    display: block;
+    width: 300px;
+    padding: 8px;
+    border-radius: 8px;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-size: 18px;
+    border: 2px solid black;
+    margin-bottom: 16px;
+}
+
+#add-comment-form button {
+    width: 11em;
+    border-radius: 1.6em;
+}
+
 #upvotes-section p {
     font-size: .9em;
     display: inline-block;
